# rss-reader

./: .gitignore  .pre-commit-config.yaml  Dockerfile.prod  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile.devcontainer  devcontainer.json  docker-compose.devcontainer.yml
IaC/: README.md
IaC/environments/prod/: main.tf  variables.tf
IaC/modules/artifact_registry/: main.tf  outputs.tf  variable.tf
src/: const.py  custom_types.py  main.py
src/subscribe/: __init__.py  langchain_changelog.py
